# Face_Landmark_Detection

./: CMakeLists.txt  Makefile  MediaPipeFaceLandmarkDetector.onnx  README.md  main.cpp
include/: FaceLandMarkDetectionManager.h  client.h  faceDetector.h  faceLandmark.h  jsonParser.h  server.h  timeUtil.h
src/: FaceLandMarkDetectionManager.cpp  client.cpp  faceDetector.cpp  faceLandmark.cpp  jsonParser.cpp  server.cpp  timeUtil.cpp
